Added simple data source

--- a/usecase3/pom.xml
+++ b/usecase3/pom.xml
@@ -212,6 +212,7 @@
 						<Bundle-Version>${project.version}</Bundle-Version>
 						<Bundle-Activator>org.apodhrad.testday.Activator</Bundle-Activator>
 						<DynamicImport-Package>*</DynamicImport-Package>
+						<Import-Package>*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
