--- a/usecase3/pom.xml
+++ b/usecase3/pom.xml
@@ -169,9 +169,20 @@
 			<artifactId>xbean-spring</artifactId>
 			<version>3.15</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
+			<version>3.2.8.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
+			<version>3.2.8.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
 			<version>3.2.8.RELEASE</version>
 		</dependency>
 
