--- a/test/pom.xml
+++ b/test/pom.xml
@@ -4,10 +4,10 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
-	<artifactId>camel-spring-dm</artifactId>
+	<groupId>org.apodhrad.testday</groupId>
+	<artifactId>test</artifactId>
 	<packaging>bundle</packaging>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 
 	<name>A Camel Spring-DM Route</name>
 	<url>http://www.myorganization.org</url>
