--- a/oracle-ds/pom.xml
+++ b/oracle-ds/pom.xml
@@ -21,9 +21,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.apodhrad.testday</groupId>
+    <groupId>com.example</groupId>
     <artifactId>oracle-ds</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>oracle-ds Bundle</name>
