--- a/usecase1/pom.xml
+++ b/usecase1/pom.xml
@@ -3,9 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>org.apodhrad.testday</groupId>
-	<artifactId>test</artifactId>
+	<parent>
+		<groupId>com.example</groupId>
+		<artifactId>parent</artifactId>
+		<version>1.0.0-SNAPSHOT</version>
+	</parent>
+	<groupId>com.example</groupId>
+	<artifactId>usecase1</artifactId>
 	<packaging>bundle</packaging>
 	<version>1.0-SNAPSHOT</version>
 
@@ -15,28 +19,29 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<camel.version>2.12.0</camel.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
-			<version>2.12.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring</artifactId>
-			<version>2.12.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-jms</artifactId>
-			<version>2.12.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-sql</artifactId>
-			<version>2.12.0</version>
+			<version>${camel.version}</version>
 		</dependency>
 
 		<!-- logging -->
@@ -60,7 +65,7 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-spring</artifactId>
-			<version>2.12.0</version>
+			<version>${camel.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -91,7 +96,7 @@
 			<plugin>
 				<groupId>org.apache.camel</groupId>
 				<artifactId>camel-maven-plugin</artifactId>
-				<version>2.12.0</version>
+				<version>${camel.version}</version>
 			</plugin>
 
 			<!-- to generate the MANIFEST-FILE of the bundle -->
