--- a/usecase1/pom.xml
+++ b/usecase1/pom.xml
@@ -11,10 +11,9 @@
 	<groupId>com.example</groupId>
 	<artifactId>usecase1</artifactId>
 	<packaging>bundle</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
-	<name>A Camel Spring-DM Route</name>
-	<url>http://www.myorganization.org</url>
+	<name>Use Case 1: DB XA</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
